...

private fun GamepadPosition.shortCalibrationLabel(): String = when (this) {
    GamepadPosition.SOUTH -> "Bottom"
    GamepadPosition.EAST -> "Right"
    GamepadPosition.WEST -> "Left"
    GamepadPosition.NORTH -> "Top"
    GamepadPosition.DPAD_UP -> "D-pad Up"
    GamepadPosition.DPAD_DOWN -> "D-pad Down"
    GamepadPosition.DPAD_LEFT -> "D-pad Left"
    GamepadPosition.DPAD_RIGHT -> "D-pad Right"
    GamepadPosition.L1 -> "L1"
    GamepadPosition.R1 -> "R1"
    GamepadPosition.L2 -> "L2"
    GamepadPosition.R2 -> "R2"
...
